// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`videos actions creates FETCH_VIDEOS_FAILURE when fetching video ids has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_VIDEOS_REQUEST",
  },
  Object {
    "type": "FETCH_VIDEOS_FAILURE",
  },
]
`;

exports[`videos actions creates FETCH_VIDEOS_FAILURE when fetching videos has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_VIDEOS_REQUEST",
  },
  Object {
    "type": "FETCH_VIDEOS_FAILURE",
  },
]
`;

exports[`videos actions creates FETCH_VIDEOS_SUCCESS when fetching video ids has resolved with null 1`] = `
Array [
  Object {
    "type": "FETCH_VIDEOS_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [],
      "nextPageToken": "",
    },
    "type": "FETCH_VIDEOS_SUCCESS",
  },
]
`;

exports[`videos actions creates FETCH_VIDEOS_SUCCESS when fetching video ids has resolved with undefined 1`] = `
Array [
  Object {
    "type": "FETCH_VIDEOS_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [],
      "nextPageToken": "",
    },
    "type": "FETCH_VIDEOS_SUCCESS",
  },
]
`;

exports[`videos actions creates FETCH_VIDEOS_SUCCESS when fetching videos has been resolved 1`] = `
Array [
  Object {
    "type": "FETCH_VIDEOS_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [
        "M8l2aGMjKHI",
        "GcSACxUbqtg",
      ],
      "nextPageToken": "CBQQAA",
    },
    "type": "FETCH_VIDEOS_SUCCESS",
  },
]
`;

exports[`videos actions should create an action to handle an error 1`] = `
Object {
  "type": "FETCH_VIDEOS_FAILURE",
}
`;

exports[`videos actions should create an action to receive videos 1`] = `
Object {
  "payload": Object {
    "items": Array [
      "M8l2aGMjKHI",
      "GcSACxUbqtg",
    ],
    "nextPageToken": "CBQQAA",
  },
  "type": "FETCH_VIDEOS_SUCCESS",
}
`;

exports[`videos actions should create an action to request videos 1`] = `
Object {
  "type": "FETCH_VIDEOS_REQUEST",
}
`;
